styles/styles.css
@font-face {
  font-family: "TT Norms";
  font-style: normal;
  font-weight: 400;
  src: url("../fonts/tt-norms-regular.woff2") format("woff2");
  font-display: swap;
}

@font-face {
  font-family: "TT Norms";
  font-style: normal;
  font-weight: 500;
  src: url("../fonts/tt-norms-medium.woff2") format("woff2");
  font-display: swap;
}

@font-face {
  font-family: "TT Norms";
  font-style: normal;
  font-weight: 700;
  src: url("../fonts/tt-norms-bold.woff2") format("woff2");
  font-display: swap;
}

:root {
  --background-color: #F6F5FF;
  --sidebar-bg-color: #FFFFFF;
  --sidebar-bg-active-color: #455AE0;
  --sidebar-active-color: #FFFFFF;
  --svg-color: #8F9FAD;
  --open-btn-color: #455AE0;
  --heading-color: #333333;
  --card-bg-color: #FFFFFF;
  --text-color: #333333;
  --profile-color: #000000;
  --profile-job-color: #8F9FAD;
  --widget-btn-color: #7658E0;
  --nav-search-color: #F6F5FF;
}

.dark {
  --background-color: #000000;
  --sidebar-bg-color: #242526;
  --sidebar-bg-active-color: #3A3B3C;
  --sidebar-active-color: #CCCCCC;
  --svg-color: #CCCCCC;
  --open-btn-color: #333335;
  --heading-color: #FFFFFF;
  --card-bg-color: #474849;
  --text-color: #CCCCCC;
  --profile-color: #FFFFFF;
  --profile-job-color: #CCCCCC;
  --widget-btn-color: #FFFFFF;
  --nav-search-color: #3A3B3C;
}

a:hover {
  opacity: 0.7;
  transition: all 300ms linear;
}

a:active {
  opacity: 0.5;
}

button:hover {
  opacity: 0.7;
  transition: all 300ms linear;
}

button:active {
  opacity: 0.5;
}

html {
  height: 100%;
}

body {
  margin: 0;
  height: 100%;
  font-family: "TT Norms", sans-serif;
  font-size: 14px;
  line-height: 18px;
  color: #333333;
  background-color: #F6F5FF;
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

.wrapper {
  max-width: 2200px;
  min-height: 100%;
  margin: 0 auto;
  background-color: var(--background-color);
}

.sidebar {
  position: fixed;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  background-color: var(--sidebar-bg-color);
  z-index: 10;
}

.sidebar-opened .page-content {
  margin-left: 250px;
}

@media (max-width: 660px) {
  .sidebar-opened .page-content {
    margin-left: 88px;
  }
}

.sidebar__nav {
  padding-top: 96px;
}

.nav__list {
  margin: 0;
  padding: 14px;
  list-style: none;
}

.nav__search {
  display: flex;
  margin-bottom: 10px;
  padding: 18px;
  border-radius: 10px;
  text-decoration: none;
  color: var(--svg-color);
  background-color: var(--nav-search-color);
  font-size: 18px;
  line-height: normal;
  font-weight: 500;
}

.nav__search svg {
  margin-right: 0;
}

.sidebar-opened .nav__search svg {
  margin-right: 24px;
}

.nav-link {
  display: flex;
  margin-bottom: 10px;
  padding: 18px;
  border-radius: 10px;
  text-decoration: none;
  color: var(--svg-color);
  font-size: 18px;
  line-height: normal;
  font-weight: 500;
}

.nav-link svg {
  color: var(--svg-color);
}

.nav-link--active {
  background-color: var(--sidebar-bg-active-color);
}

.nav-link--active svg {
  color: #FFFFFF;
}

.nav-link--active .nav-link__text {
  color: #FFFFFF;
}

.nav-link svg {
  margin-right: 0;
}

.sidebar-opened .nav-link svg {
  margin-right: 24px;
}

.sidebar__open-btn-container {
  min-height: 96px;
  position: absolute;
  min-width: 88px;
}

.sidebar-opened .sidebar__open-btn-container {
  min-width: 250px;
}

.open-btn {
  position: absolute;
  min-width: 26px;
  min-height: 26px;
  background-image: url("../img/right-arrow-icon.svg");
  background-color: var(--open-btn-color);
  border: none;
  border-radius: 50%;
  right: -13px;
  top: 50%;
  z-index: 1;
  cursor: pointer;
}

.sidebar-opened .open-btn {
  background-image: url("../img/left-arrow-icon.svg");
}

.sidebar__btn-block {
  display: flex;
  flex-direction: column;
  padding: 20px 14px;
}

.sidebar__btn {
  display: flex;
  align-items: center;
  margin-bottom: 10px;
  border: none;
  border-radius: 10px;
  color: var(--svg-color);
  background-color: var(--sidebar-bg-color);
  font-size: 18px;
  line-height: normal;
  font-weight: 500;
  text-align: center;
  cursor: pointer;
}

.dark .sidebar__btn {
  margin-bottom: 9px;
}

.exit-btn {
  padding: 18px;
  background-color: var(--sidebar-bg-color);
}

.exit-btn::before {
  position: relative;
  content: "";
  min-width: 24px;
  min-height: 24px;
  background-image: url("../img/sign-out-icon.svg");
  z-index: 1;
}

.dark .exit-btn::before {
  background-image: url("../img/sign-out-dark-icon.png");
}

.dark .dark-theme-btn {
  background-color: #3A3B3C;
  color: #CCCCCC;
}

.sidebar-opened .dark-theme-btn::before {
  position: relative;
  content: "";
  min-width: 24px;
  min-height: 24px;
  background-image: url("../img/dark-mode-icon.svg");
  z-index: 1;
}

.sidebar-opened .dark::before {
  background-image: url("../img/light-mode-icon.svg");
}

.dark-theme-btn {
  padding: 10px;
}

.sidebar-opened .dark-theme-btn {
  padding: 18px;
}

.dark-theme-btn::after {
  position: relative;
  content: "";
  min-width: 40px;
  min-height: 22px;
  background-image: url("../img/switch-off-icon.svg");
  z-index: 1;
}

.dark .dark-theme-btn::after {
  min-width: 42px;
  min-height: 24px;
  background-image: url("../img/switch-on-icon.svg");
}

.sidebar__btn-text {
  padding-left: 20px;
  padding-right: 12px;
}

.dark .dark-theme-btn .sidebar__btn-text {
  padding-right: 10px;
}

.page-content {
  margin-left: 88px;
}

.profile {
  min-height: 84px;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  padding: 10px 40px;
  border-bottom: 2px solid #FFFFFF;
}

.profile__link {
  display: flex;
  align-items: center;
  text-decoration: none;
  color: var(--profile-color);
  font-size: 18px;
  line-height: normal;
  font-weight: 500;
}

.profile__info {
  margin-right: 30px;
}

.profile__name {
  margin: 0;
  margin-bottom: 6px;
}

.profile__job-title {
  margin: 0;
  color: #8F9FAD;
  font-size: 12px;
}

.page-content__block {
  padding: 34px 42px 40px 28px;
}

.indicators__wrapper,
.widgets__wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  padding: 0 30px 30px;
}

.indicators__title {
  margin: 0;
  font-size: 30px;
  line-height: 36px;
  font-weight: 700;
  color: var(--heading-color);
}

.indicators__settings {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  flex-wrap: wrap;
}

.indicators-btn {
  border: none;
  background: none;
  font-size: 14px;
  line-height: 18px;
  font-weight: 500;
  color: var(--text-color);
  cursor: pointer;
}

.indicators__marketplace-btn {
  position: relative;
  padding: 8px 34px 8px 38px;
  margin-right: 10px;
}

.indicators__marketplace-btn::before {
  position: absolute;
  content: "";
  min-width: 18px;
  min-height: 18px;
  background-image: url("../img/marketplace-icon.png");
  left: 10px;
  top: 8px;
  z-index: 1;
  cursor: pointer;
}

.indicators__marketplace-btn::after {
  position: absolute;
  content: "";
  min-width: 18px;
  min-height: 18px;
  background-image: url("../img/arrow-down.png");
  right: 0;
  top: 8px;
  z-index: 1;
  cursor: pointer;
}


.indicators__time-range-btn {
  position: relative;
  padding: 8px 34px 8px 10px;
  margin-right: 30px;
}

.indicators__time-range-btn::after {
  position: absolute;
  content: "";
  min-width: 18px;
  min-height: 18px;
  background-image: url("../img/arrow-down.png");
  right: 0;
  top: 8px;
  z-index: 1;
  cursor: pointer;
}

.indicators__settings-btn {
  min-width: 24px;
  min-height: 24px;
  background-image: url("../img/settings-icon.png");
  background-color: var(--background-color);
  border: none;
  cursor: pointer;
}

.dark .indicators__settings-btn {
  background-image: url("../img/settings-dark-icon.png");
}

.indicators__cards {
  display: flex;
  flex-wrap: wrap;
  gap: 14px;
}

.indicators__card {
  width: 430px;
  padding: 20px;
  background-color: var(--card-bg-color);
  border-radius: 10px;
}

.card__indicators-wrapper {
  display: flex;
  justify-content: space-between;
  align-items: end;
  flex-wrap: wrap;
  padding-top: 16px;
}

.card__title {
  margin: 0;
  margin-bottom: 10px;
  font-size: 20px;
  line-height: 26px;
  font-weight: 500;
  color: var(--text-color);
}

.card__indicators-money {
  margin: 0;
  font-size: 18px;
  line-height: 24px;
  font-weight: 500;
  color: var(--text-color);
}

.card__indicators-percent {
  margin: 0;
  font-size: 14px;
  line-height: 18px;
  font-weight: 500;
  color: #48AC98;
}

.card__indicators-percent--red {
  color: #D74B4B;
}

.widgets__title {
  margin: 0;
  font-size: 30px;
  line-height: 36px;
  font-weight: 700;
  color: var(--text-color);
}

.widgets__settings-btn {
  min-width: 24px;
  min-height: 24px;
  background-image: url("../img/settings-icon.png");
  background-color: var(--background-color);
  border: none;
  cursor: pointer;
}

.dark .widgets__settings-btn {
  background-image: url("../img/settings-dark-icon.png");
}

.widgets__cards {
  display: flex;
  flex-wrap: wrap;
  row-gap: 16px;
  column-gap: 94px;
}

.widget {
  width: 524px;
  padding-bottom: 0;
  background-color: var(--card-bg-color);
  border-radius: 10px;
}

.widget__title {
  padding: 20px 20px 10px;
  font-size: 20px;
  line-height: 26px;
  font-weight: 500;
  color: var(--text-color);
}

.widget__wrapper {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
  padding: 14px 20px 30px;
  border-bottom: 1px solid #F6F5FF;
}

.widget__info {
  width: 178px;
}

.widget__chart {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 186px;
  min-height: 186px;
  background-image: url("../img/pie-chart.png");
  background-repeat: no-repeat;
  background-position: center;
}

.widget__chart-total {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.widget__chart-total-title {
  margin: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #8F9FAD;
}

.widget__chart-total-number {
  margin: 0;
  font-size: 18px;
  line-height: 22px;
  font-weight: 500;
  color: var(--text-color);
}

.widgets__btn {
  display: block;
  width: 100%;
  padding: 14px;
  font-size: 16px;
  line-height: 20px;
  color: var(--widget-btn-color);
  background-color: var(--card-bg-color);
  border: none;
  border-radius: 0 0 10px 10px;
  cursor: pointer;
}

.widget__order {
  position: relative;
  padding-left: 18px;
  margin-bottom: 20px;
}

.widget__order--last {
  margin: 0;
}

.widget__order::before {
  position: absolute;
  content: "";
  min-width: 8px;
  min-height: 8px;
  border-radius: 50%;
  top: 6px;
  left: 0;
  background-color: #AC9BEB;
}

.widget__order--yellow::before {
  background-color: #FDDA77;
}

.widget__order--green::before {
  background-color: #7ECBB6;
}

.widget__order-type {
  margin: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #8F9FAD;
}

.widget__order-quantity {
  margin: 0;
  font-size: 16px;
  line-height: 20px;
  font-weight: 500;
  color: var(--text-color);
}

